<resources>
    <string name="app_name">SmartKickertisch</string>
    <string name="welcome_headline">Welcome \nto \nSmartKicker</string>
    <string name="welcome_signup_button">Let\'s Go!</string>
    <string name="welcome_login_text">Not the first time here?</string>
    <string name="welcome_login_button">log in</string>
    <string name="sign_up_headline">New \nAccount</string>
    <string name="sign_up_profile_picture">Add your profile picture (optional)</string>
    <string name="sign_up_nickname_hint">Nickname</string>
    <string name="sign_up_email_hint">E-Mail Address</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_repeat_password_hint">Repeat Password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_error_password_short">Your password must be at least 6 characters long!</string>
    <string name="sign_up_error_email_taken">This e-mail address is already taken!</string>
    <string name="e_mail">E-Mail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="host">Host\n%1$s</string>
    <string name="all_time_stats">All Time</string>
    <string name="leaderboard_stats">Leaderboard</string>
    <string name="last_month_stats">Last Month</string>
    <string name="match_history">Match history</string>
    <string name="sort_by_wins">Sort by: WINS</string>
    <string name="sort_by_games">Sort by: GAMES PLAYED</string>
    <string name="nickname_recycler">Nickname:</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="ongoing">ONGOING</string>
    <string name="delete_account">Delete Account</string>/>
</resources>
