<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signUpBackgroundLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:fillViewport="true"
    tools:context=".SignUpActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/signUpForegroundConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/signUpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:lines="2"
            android:minLines="2"
            android:text="@string/sign_up_headline"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePictureImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="16dp"
            android:onClick="addImage"
            android:src="@drawable/profile_picture_preview"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signUpTextView"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/profilePictureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:text="@string/sign_up_profile_picture"
            android:textColor="@color/colorSignUpProfilePictureText"
            app:layout_constraintBottom_toBottomOf="@id/profilePictureImageView"
            app:layout_constraintStart_toEndOf="@id/profilePictureImageView"
            app:layout_constraintTop_toTopOf="@id/profilePictureImageView" />

        <EditText
            android:id="@+id/nicknameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorSignUpProfilePictureText"
            android:ems="10"
            android:hint="@string/sign_up_nickname_hint"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/colorSignUpButtonText"
            android:textColorHint="@color/colorSignUpProfilePictureText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profilePictureImageView"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorSignUpProfilePictureText"
            android:ems="10"
            android:hint="@string/sign_up_email_hint"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/colorSignUpButtonText"
            android:textColorHint="@color/colorSignUpProfilePictureText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nicknameEditText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorSignUpProfilePictureText"
            android:ems="10"
            android:hint="@string/sign_up_password_hint"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@color/colorSignUpButtonText"
            android:textColorHint="@color/colorSignUpProfilePictureText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/repeatPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/colorSignUpProfilePictureText"
            android:ems="10"
            android:hint="@string/sign_up_repeat_password_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorSignUpButtonText"
            android:textColorHint="@color/colorSignUpProfilePictureText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:text=""
            android:textColor="@color/colorSignUpError"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText" />

        <ProgressBar
            android:id="@+id/signUpLoadingProgressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/repeatPasswordEditText"
            app:layout_constraintBottom_toTopOf="@id/signUpButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <Button
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:id="@+id/signUpButton"
            android:background="@drawable/round_button"
            android:onClick="createAccountClicked"
            android:text="@string/sign_up_button"
            android:textAllCaps="false"
            android:textColor="@color/colorSignUpButtonText"
            android:textSize="24sp"
            android:enabled="false"
            android:alpha="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorTextView"
            app:layout_constraintVertical_bias="0.5" />

    </android.support.constraint.ConstraintLayout>

</ScrollView>


