<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    android:fillViewport="true"
    android:padding="16dp"
    tools:context=".SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/settingsConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/changeNickSettingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_nickname_hint"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.01" />

        <TextView
            android:id="@+id/currentNickSettingTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSignUpButtonText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/changeNickSettingTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/changeNickSettingTextView" />

        <EditText
            android:id="@+id/changeNickSettingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:gravity="end"
            android:hint="New Nickname"
            android:inputType="text"
            android:textColor="@color/colorSignUpButtonText"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/changePasswordSettingsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeNickSettingTextView" />

        <TextView
            android:id="@+id/changePasswordSettingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_password_hint"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/changePasswordSettingEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeNickSettingEditText" />

        <EditText
            android:id="@+id/changePasswordSettingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:gravity="end"
            android:hint="New Password"
            android:inputType="textPassword"
            android:textColor="@color/colorSignUpButtonText"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/changeMailSettingsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePasswordSettingsTextView" />


        <TextView
            android:id="@+id/changeMailSettingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_email_hint"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changePasswordSettingEditText" />

        <TextView
            android:id="@+id/currentMailSettingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSignUpButtonText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/changeMailSettingsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/changeMailSettingsTextView" />

        <EditText
            android:id="@+id/changeMailSettingsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorWhite"
            android:gravity="end"
            android:hint="New E-Mail"
            android:inputType="text"
            android:textColor="@color/colorSignUpButtonText"
            android:textColorHint="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/changePictureSettingsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeMailSettingsTextView" />

        <TextView
            android:id="@+id/changePictureSettingsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/profile_picture"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/changeMailSettingsEditText" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/currentPictureSettingsImageView"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/profile_picture_preview"
            app:civ_border_color="@color/colorWhite"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@id/changePictureSettingsTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/changePictureSettingsTextView" />

        <TextView
            android:id="@+id/errorSettingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorSignUpError"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentPictureSettingsImageView" />

        <Button
            android:id="@+id/saveChangesButton"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textColor="@color/colorSignUpButtonText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logoutSettingsButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/settingsProgressBar"
            app:layout_constraintVertical_bias="0.25" />

        <Button
            android:id="@+id/logoutSettingsButton"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:background="@drawable/round_button"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@color/colorSignUpButtonText"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/saveChangesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/saveChangesButton"
            app:layout_constraintTop_toTopOf="@id/saveChangesButton" />

        <ProgressBar
            android:id="@+id/settingsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/saveChangesButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/errorSettingsTextView" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>


